[package]
name = "bitende"
version = "0.0.1"
authors = ["shellrow <shellrow@fortnium.com>"]
edition = "2021"
description = "[WIP]Encrypt/Decrpyt strings, files, data or calculate hash"
repository = "https://github.com/shellrow/bitende"
readme = "README.md"
keywords = ["encryption", "chacha20poly1305", "aes-gcm"]
categories = ["cryptography", "encoding", "filesystem"]
license = "MIT"

[dependencies]
